[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Pong.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/hit.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/lose.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/music.wav" type="AudioStream" id=6]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Game" parent="." index="0" instance=ExtResource( 2 )]

[node name="HUD" parent="." index="1" instance=ExtResource( 3 )]

[node name="hit" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="lose" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="music" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="hit" from="Game" to="." method="_on_Game_hit"]

[connection signal="leftLose" from="Game" to="." method="_on_Game_leftLose"]

[connection signal="lose" from="Game" to="." method="_on_Game_lose"]

[connection signal="rightLose" from="Game" to="." method="_on_Game_rightLose"]

[connection signal="finished" from="lose" to="." method="_on_lose_finished"]

[connection signal="finished" from="music" to="." method="_on_music_finished"]


